tests/ui/fail/nightly/stmt_expr.stderr
error: `#[with]` can only be applied to an `fn`, a `trait`, or an `impl`.
  --> $DIR/stmt_expr.rs:12:13
   |
12 |     let _ = #[with] expr();
   |             ^^^^^^^

error: `#[with]` can only be applied to an `fn`, a `trait`, or an `impl`.
 --> $DIR/stmt_expr.rs:6:5
  |
6 |     #[with]
  |     ^^^^^^^
